# Re-regularc

./: CMakeLists.txt  binary.regex  inner.regex  main.h  namedcapture.c  test.test.c  typename.regex
.github/workflows/: cmake.yml
lexer/: lexer.cpp  lexer.hpp
llvm/: llvmgen.cpp  llvmgen.h
oniguruma/: handler.c  onigurumaparse.cpp
regexes/: binary.regex  inner.regex  parse.pl  primexpr.regex  statement.regex  typename.regex  unary.regex
src/: main.c  main.h  perltoc.xs
utility/: utility.cpp
